[package]
name = "fabrik"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
eframe = "0.33.2"
egui = "0.33.2"
minifb = "0.28.0"
ratatui = "0.29.0"

[[bin]]
name = "fabrik-tui"
path = "src/bin/tui.rs"

[[bin]]
name = "fabrik-egui"
path = "src/bin/egui.rs"

[[bin]]
name = "fabrik-minifb"
path = "src/bin/minifb.rs"
